--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 .container{
     width: 100%;
-    height:200px;
+    height:100vh;
     background-color:grey;
     display: flex;
     justify-content: center;
